# KoraChain

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
node/: Cargo.toml
node/chain-specs/: chanto-testnet.json
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/src/: benchmarking.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
