[package]
name = "kora-chain-runtime"
description = "KoraChain Logic Layer, powered by Substrate."
version = "0.1.0"
license = "Unlicense"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
frame-try-runtime = { optional = true, workspace = true }
pallet-babe.workspace = true
pallet-balances.workspace = true
pallet-grandpa.workspace = true
pallet-staking.workspace = true
pallet-staking-reward-curve.workspace = true
pallet-nomination-pools.workspace = true
frame-election-provider-support.workspace = true
pallet-session.workspace = true
pallet-authorship.workspace = true
pallet-im-online.workspace = true
pallet-offences.workspace = true
pallet-utility.workspace = true
pallet-election-provider-multi-phase.workspace = true
pallet-delegated-staking.workspace = true
pallet-treasury.workspace = true
pallet-sudo.workspace = true
pallet-template.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
pallet-bags-list.workspace = true
pallet-assets.workspace = true
pallet-vesting.workspace = true
pallet-identity.workspace = true
pallet-recovery.workspace = true
pallet-bounties.workspace = true
pallet-glutton.workspace = true
pallet-preimage.workspace = true
pallet-scheduler.workspace = true
pallet-asset-conversion.workspace = true
pallet-asset-rate.workspace = true
pallet-referenda.workspace = true
pallet-conviction-voting.workspace = true
pallet-proxy.workspace = true
pallet-parameters.workspace = true
pallet-verify-signature.workspace = true
pallet-nomination-pools-runtime-api.workspace = true
pallet-staking-runtime-api.workspace = true
pallet-child-bounties.workspace = true
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-babe.workspace = true
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-offchain.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-session.workspace = true
sp-staking.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version = { features = ["serde"], workspace = true }
sp-io = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-nomination-pools/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-staking/std",
	"pallet-session/std",
	"pallet-authorship/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-utility/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-delegated-staking/std",
	"frame-election-provider-support/std",
	"pallet-treasury/std",
	"pallet-bags-list/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-assets/std",
	"pallet-vesting/std",
	"pallet-identity/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"pallet-asset-conversion/std",
	"pallet-asset-rate/std",
	"pallet-referenda/std",
	"pallet-conviction-voting/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"pallet-bounties/std",
	"pallet-glutton/std",
	"pallet-parameters/std",
	"pallet-verify-signature/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-staking-runtime-api/std",
	"pallet-nomination-pools/std",
	"pallet-child-bounties/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-delegated-staking/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-glutton/runtime-benchmarks",
	"pallet-parameters/runtime-benchmarks",
	"pallet-verify-signature/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"frame-election-provider-support/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-session/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-glutton/try-runtime",
	"pallet-parameters/try-runtime",
	"pallet-verify-signature/try-runtime",
	"pallet-child-bounties/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
